a fix (bug #11546: Bad error message from inserting out of range values, SQL_MODE='tradition').

sql/field.cc:
  a fix (bug #11546: Bad error message from inserting out of range values, SQL_MODE='tradition').
  raise an error in case of strict mode for bit fields.